test/parse/strict/bad/spaceinsteadofliteral.sol
s SATISFIABLE
v 2 0
